--- a/page1.html
+++ b/page1.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>page1</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
@@ -32,7 +32,8 @@
 <body>
 
     <div class="container" style="text-align: center;">
-        <h1>hello world</h1>
+        <h1>Which shapes do you like?</h1>
+        <p>Pick as many as you want</p>
 
         <div class="row">
             <div id="card1" class="card col border-0" onclick="handleOnClick(1)">
@@ -46,14 +47,14 @@
                 <img src="https://cdn.shopify.com/s/files/1/1817/8293/products/AsteriBlackFront_2000x.jpg?v=1597655858"
                     class="card-img-top" alt="...">
                 <div class="card-body">
-                    <div id="a2" class="btn btn-outline-primary" >Rectangular</div>
+                    <div id="a2" class="btn btn-outline-primary">Rectangular</div>
                 </div>
             </div>
             <div id="card3" class="card col border-0" onclick="handleOnClick(3)">
                 <img src="https://cdn.shopify.com/s/files/1/1817/8293/products/AsteriBlackFront_2000x.jpg?v=1597655858"
                     class="card-img-top" alt="...">
                 <div class="card-body">
-                    <div id="a3" class="btn btn-outline-primary" >Square</div>
+                    <div id="a3" class="btn btn-outline-primary">Square</div>
                 </div>
             </div>
             <div id="card4" class="card col border-0" onclick="handleOnClick(4)">
@@ -64,15 +65,37 @@
                 </div>
             </div>
         </div>
+        <a id="confirm" class="btn btn-outline-secondary" href="page2.html">No preference</a>
+
     </div>
     <script>
         function handleOnClick(index) {
             let card = "card" + index;
             let a = "a" + index;
-            document.getElementById(card).style.cssText = "transition: all 0.2s ease-out; box-shadow: 0px 4px 8px rgba(38, 38, 38, 0.2);top: -4px;border: 1px solid #cccccc;background-color: white;"
-            document.getElementById(a).className = "btn btn-primary"
-
-            setInterval(function () { location.href = "page2.html" }, 500);
+            // set element is selected
+            if (document.getElementById(a).className != "btn btn-primary") {
+                document.getElementById(card).style.cssText = "transition: all 0.2s ease-out; box-shadow: 0px 4px 8px rgba(38, 38, 38, 0.2);top: -4px;border: 1px solid #cccccc;background-color: white;"
+                document.getElementById(a).className = "btn btn-primary"
+            } else {
+                document.getElementById(card).style.cssText = ""
+                document.getElementById(a).className = "btn btn-outline-primary"
+            }
+            let tabcontent = document.getElementsByClassName("card");
+            let isSelect = 0
+            // check if choosebu
+            for (i = 1; i < 4; i++) {
+                a = "a" + i
+                if (document.getElementById(a).className == "btn btn-primary") {
+                    isSelect++;
+                }
+            }
+            if (isSelect > 0) {
+                document.getElementById("confirm").className = "btn btn-primary"
+                document.getElementById("confirm").innerHTML = "Continue"
+            }else {
+                document.getElementById("confirm").className = "btn btn-outline-secondary"
+                document.getElementById("confirm").innerHTML = "No preference"
+            }
         }
     </script>
 </body>
