--- a/page2.html
+++ b/page2.html
@@ -1,4 +1,96 @@
-<h1>test2</h1>
+<!DOCTYPE html>
+<html lang="en">
 
-<button href="test3.html">choice1</button>
-<button href="test3.html">choice2</button>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>page2</title>
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"
+        integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js"
+        integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj"
+        crossorigin="anonymous"></script>
+
+    <style>
+        .card:hover {
+            transition: all 0.2s ease-out;
+            box-shadow: 0px 4px 8px rgba(38, 38, 38, 0.2);
+            top: -4px;
+            border: 1px solid #cccccc;
+            background-color: white;
+        }
+    </style>
+</head>
+
+<body>
+
+    <div class="container" style="text-align: center;">
+        <h1>Which material do you like</h1>
+        <p>Pick as many as you want</p>
+
+
+        <div class="row">
+            <div id="card1" class="card col border-0" onclick="handleOnClick(1)">
+                <img src="https://cdn.shopify.com/s/files/1/1817/8293/products/AsteriBlackFront_2000x.jpg?v=1597655858"
+                    class="card-img-top" alt="...">
+                <div class="card-body">
+                    <div id="a1" class="btn btn-outline-primary">Acetate</div>
+                </div>
+            </div>
+            <div id="card2" class="card col border-0" onclick="handleOnClick(2)">
+                <img src="https://cdn.shopify.com/s/files/1/1817/8293/products/AsteriBlackFront_2000x.jpg?v=1597655858"
+                    class="card-img-top" alt="...">
+                <div class="card-body">
+                    <div id="a2" class="btn btn-outline-primary">Metal</div>
+                </div>
+            </div>
+            <div id="card3" class="card col border-0" onclick="handleOnClick(3)">
+                <img src="https://cdn.shopify.com/s/files/1/1817/8293/products/AsteriBlackFront_2000x.jpg?v=1597655858"
+                    class="card-img-top" alt="...">
+                <div class="card-body">
+                    <div id="a3" class="btn btn-outline-primary">Mixed material</div>
+                </div>
+            </div>
+        </div>
+        <a id="confirm" class="btn btn-outline-secondary" href="page2.html">No preference</a>
+    </div>
+    <script>
+        function handleOnClick(index) {
+            let card = "card" + index;
+            let a = "a" + index;
+            // set element is selected
+            if (document.getElementById(a).className != "btn btn-primary") {
+                document.getElementById(card).style.cssText = "transition: all 0.2s ease-out; box-shadow: 0px 4px 8px rgba(38, 38, 38, 0.2);top: -4px;border: 1px solid #cccccc;background-color: white;"
+                document.getElementById(a).className = "btn btn-primary"
+            } else {
+                document.getElementById(card).style.cssText = ""
+                document.getElementById(a).className = "btn btn-outline-primary"
+            }
+            let tabcontent = document.getElementsByClassName("card");
+            let isSelect = 0
+            // check if choosebu
+            for (i = 1; i < 4; i++) {
+                a = "a" + i
+                if (document.getElementById(a).className == "btn btn-primary") {
+                    isSelect++;
+                }
+            }
+            if (isSelect > 0) {
+                document.getElementById("confirm").className = "btn btn-primary"
+                document.getElementById("confirm").innerHTML = "Continue"
+            }else {
+                document.getElementById("confirm").className = "btn btn-outline-secondary"
+                document.getElementById("confirm").innerHTML = "No preference"
+            }
+        }
+    </script>
+</body>
+
+</html>
