add page5,6 noedit

--- a/page4.html
+++ b/page4.html
@@ -54,7 +54,7 @@
                 <img src="https://i.warbycdn.com/v/c/assets/frames-quiz/image/color-black/1/1c6017ab1c.png?quality=70&width=132"
                     class="card-img-top" alt="...">
                 <div class="card-body">
-                    <div id="a3" class="btn btn-outline-primary" >Outing</div>
+                    <div id="a3" class="btn btn-outline-primary" >Outting</div>
                 </div>
             </div>
             <div id="card4" class="card col border-0" onclick="handleOnClick(4)">
