--- a/page3.html
+++ b/page3.html
@@ -36,42 +36,42 @@
         <p>Pick as many as you want </p>
 
         <div class="row">
-            <div id="card1" class="card col border-0" onclick="handleOnClick(1)">
+            <div id="card1" class="card col-6 col-md border-0" onclick="handleOnClick(1)">
                 <img src="https://i.warbycdn.com/v/c/assets/frames-quiz/image/color-bright/0/5f898a7632.png?quality=70&width=132"
                     class="card-img-top" alt="...">
                 <div class="card-body">
                     <div id="a1" class="btn btn-outline-primary">Bright</div>
                 </div>
             </div>
-            <div id="card2" class="card col border-0" onclick="handleOnClick(2)">
+            <div id="card2" class="card col-6 col-md border-0" onclick="handleOnClick(2)">
                 <img src="https://i.warbycdn.com/v/c/assets/frames-quiz/image/color-neutral/0/1446237873.png?quality=70&width=132"
                     class="card-img-top" alt="...">
                 <div class="card-body">
                     <div id="a2" class="btn btn-outline-primary" >Neutral</div>
                 </div>
             </div>
-            <div id="card3" class="card col border-0" onclick="handleOnClick(3)">
+            <div id="card3" class="card col-6 col-md border-0" onclick="handleOnClick(3)">
                 <img src="https://i.warbycdn.com/v/c/assets/frames-quiz/image/color-black/1/1c6017ab1c.png?quality=70&width=132"
                     class="card-img-top" alt="...">
                 <div class="card-body">
                     <div id="a3" class="btn btn-outline-primary" >Black</div>
                 </div>
             </div>
-            <div id="card4" class="card col border-0" onclick="handleOnClick(4)">
+            <div id="card4" class="card col-6 col-md border-0" onclick="handleOnClick(4)">
                 <img src="https://i.warbycdn.com/v/c/assets/frames-quiz/image/color-tortoise/1/7c9e6b8959.png?quality=70&width=132"
                     class="card-img-top" alt="...">
                 <div class="card-body">
                     <div id="a4" class="btn btn-outline-primary">Tortoise</div>
                 </div>
             </div>
-            <div id="card5" class="card col border-0" onclick="handleOnClick(4)">
+            <div id="card5" class="card col-6 col-md border-0" onclick="handleOnClick(5)">
                 <img src="https://i.warbycdn.com/v/c/assets/frames-quiz/image/color-crystal/1/d913db33e8.png?quality=70&width=132"
                     class="card-img-top" alt="...">
                 <div class="card-body">
                     <div id="a5" class="btn btn-outline-primary">Crystal</div>
                 </div>
             </div>
-            <div id="card6" class="card col border-0" onclick="handleOnClick(4)">
+            <div id="card6" class="card col-6 col-md border-0" onclick="handleOnClick(6)">
                 <img src="https://i.warbycdn.com/v/c/assets/frames-quiz/image/color-two-tone/1/f675ee05e4.png?quality=70&width=132"
                     class="card-img-top" alt="...">
                 <div class="card-body">
@@ -80,18 +80,41 @@
             </div>
         </div>
 
-        <a type="button" class="btn btn-primary "href="page4.html">Continue</a>
-    </div>
+            <a id="confirm" class="btn btn-outline-secondary" href="page4.html">No preference</a>
+
+        </div>
 
 
-    <script>
-        function handleOnClick(index) {
-            let card = "card" + index;
-            let a = "a" + index;
-            document.getElementById(card).style.cssText = "transition: all 0.2s ease-out; box-shadow: 0px 4px 8px rgba(38, 38, 38, 0.2);top: -4px;border: 1px solid #cccccc;background-color: white;"
-            document.getElementById(a).className = "btn btn-primary"
-        }
-    </script>
+        <script>
+            function handleOnClick(index) {
+                let card = "card" + index;
+                let a = "a" + index;
+                // set element is selected
+                if (document.getElementById(a).className != "btn btn-primary") {
+                    document.getElementById(card).style.cssText = "transition: all 0.2s ease-out; box-shadow: 0px 4px 8px rgba(38, 38, 38, 0.2);top: -4px;border: 1px solid #cccccc;background-color: white;"
+                    document.getElementById(a).className = "btn btn-primary"
+                } else {
+                    document.getElementById(card).style.cssText = ""
+                    document.getElementById(a).className = "btn btn-outline-primary"
+                }
+                let tabcontent = document.getElementsByClassName("card col-6 col-md border-0");
+                let isSelect = 0
+                // check if choosebu
+                for (i = 1; i < tabcontent.length + 1; i++) {
+                    a = "a" + i
+                    if (document.getElementById(a).className == "btn btn-primary") {
+                        isSelect++;
+                    }
+                }
+                if (isSelect > 0) {
+                    document.getElementById("confirm").className = "btn btn-primary"
+                    document.getElementById("confirm").innerHTML = "Continue"
+                } else {
+                    document.getElementById("confirm").className = "btn btn-outline-secondary"
+                    document.getElementById("confirm").innerHTML = "No preference"
+                }
+            }
+        </script>
 </body>
 
 </html>
