--- a/page4.html
+++ b/page4.html
@@ -36,28 +36,28 @@
         <p>Pick as many as you want </p>
 
         <div class="row">
-            <div id="card1" class="card col border-0" onclick="handleOnClick(1)">
+            <div id="card1" class="card col-6 col-md border-0" onclick="handleOnClick(1)">
                 <img src="https://i.warbycdn.com/v/c/assets/frames-quiz/image/color-bright/0/5f898a7632.png?quality=70&width=132"
                     class="card-img-top" alt="...">
                 <div class="card-body">
                     <div id="a1" class="btn btn-outline-primary">Drive</div>
                 </div>
             </div>
-            <div id="card2" class="card col border-0" onclick="handleOnClick(2)">
+            <div id="card2" class="card col-6 col-md border-0" onclick="handleOnClick(2)">
                 <img src="https://i.warbycdn.com/v/c/assets/frames-quiz/image/color-neutral/0/1446237873.png?quality=70&width=132"
                     class="card-img-top" alt="...">
                 <div class="card-body">
                     <div id="a2" class="btn btn-outline-primary" >Read a book</div>
                 </div>
             </div>
-            <div id="card3" class="card col border-0" onclick="handleOnClick(3)">
+            <div id="card3" class="card col-6 col-md border-0" onclick="handleOnClick(3)">
                 <img src="https://i.warbycdn.com/v/c/assets/frames-quiz/image/color-black/1/1c6017ab1c.png?quality=70&width=132"
                     class="card-img-top" alt="...">
                 <div class="card-body">
                     <div id="a3" class="btn btn-outline-primary" >Outting</div>
                 </div>
             </div>
-            <div id="card4" class="card col border-0" onclick="handleOnClick(4)">
+            <div id="card4" class="card col-6 col-md border-0" onclick="handleOnClick(4)">
                 <img src="https://i.warbycdn.com/v/c/assets/frames-quiz/image/color-tortoise/1/7c9e6b8959.png?quality=70&width=132"
                     class="card-img-top" alt="...">
                 <div class="card-body">
@@ -67,7 +67,8 @@
     
         </div>
 
-        <a type="button" class="btn btn-primary "href="page4.html">Continue</a>
+        <a id="confirm" class="btn btn-outline-secondary" href="page5.html">No preference</a>
+
     </div>
 
 
@@ -75,8 +76,30 @@
         function handleOnClick(index) {
             let card = "card" + index;
             let a = "a" + index;
-            document.getElementById(card).style.cssText = "transition: all 0.2s ease-out; box-shadow: 0px 4px 8px rgba(38, 38, 38, 0.2);top: -4px;border: 1px solid #cccccc;background-color: white;"
-            document.getElementById(a).className = "btn btn-primary"
+            // set element is selected
+            if (document.getElementById(a).className != "btn btn-primary") {
+                document.getElementById(card).style.cssText = "transition: all 0.2s ease-out; box-shadow: 0px 4px 8px rgba(38, 38, 38, 0.2);top: -4px;border: 1px solid #cccccc;background-color: white;"
+                document.getElementById(a).className = "btn btn-primary"
+            } else {
+                document.getElementById(card).style.cssText = ""
+                document.getElementById(a).className = "btn btn-outline-primary"
+            }
+            let tabcontent = document.getElementsByClassName("col-6 col-md border-0");
+            let isSelect = 0
+            // check if choosebu
+            for (i = 1; i < tabcontent.length+1; i++) {
+                a = "a" + i
+                if (document.getElementById(a).className == "btn btn-primary") {
+                    isSelect++;
+                }
+            }
+            if (isSelect > 0) {
+                document.getElementById("confirm").className = "btn btn-primary"
+                document.getElementById("confirm").innerHTML = "Continue"
+            }else {
+                document.getElementById("confirm").className = "btn btn-outline-secondary"
+                document.getElementById("confirm").innerHTML = "No preference"
+            }
         }
     </script>
 </body>
