--- a/page6.html
+++ b/page6.html
@@ -17,7 +17,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js"
         integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj"
         crossorigin="anonymous"></script>
-
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    
     <style>
         .card:hover {
             transition: all 0.2s ease-out;
@@ -29,7 +30,7 @@
     </style>
 </head>
 
-<body>
+<body id="body">
 
     <div class="container" style="text-align: center;">
         <h1>Range</h1>
@@ -114,7 +115,8 @@
                 document.getElementById("confirm").innerHTML = "No preference"
             }
         }
+        $("#body").hide().fadeIn(1000);
+
     </script>
 </body>
-
 </html>
