--- a/page1.html
+++ b/page1.html
@@ -17,6 +17,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js"
         integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj"
         crossorigin="anonymous"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
 
     <style>
         .card:hover {
@@ -29,7 +31,7 @@
     </style>
 </head>
 
-<body>
+<body id="body">
 
     <div class="container" style="text-align: center;">
         <h1>Which shapes do you like?</h1>
@@ -66,10 +68,12 @@
                 </div>
             </div>
         </div>
-        <a id="confirm" class="btn btn-outline-secondary" href="page2.html">No preference</a>
+        <button id="confirm" class="btn btn-outline-secondary" onclick="changePage()">No preference</button>
 
     </div>
     <script>
+        $("#body").hide().fadeIn(1000);
+
         function handleOnClick(index) {
             let card = "card" + index;
             let a = "a" + index;
@@ -97,6 +101,11 @@
                 document.getElementById("confirm").className = "btn btn-outline-secondary"
                 document.getElementById("confirm").innerHTML = "No preference"
             }
+            
+        }
+        function changePage(){
+            $("#body").fadeOut(1000);
+            setInterval(function () { location.href = "page2.html" }, 1000)
         }
     </script>
 </body>
