--- a/page3.html
+++ b/page3.html
@@ -17,6 +17,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js"
         integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj"
         crossorigin="anonymous"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
 
     <style>
         .card:hover {
@@ -29,7 +31,7 @@
     </style>
 </head>
 
-<body>
+<body id="body">
 
     <div class="container" style="text-align: center;">
         <h1>Which colors do you like?</h1>
@@ -47,14 +49,14 @@
                 <img src="https://i.warbycdn.com/v/c/assets/frames-quiz/image/color-neutral/0/1446237873.png?quality=70&width=132"
                     class="card-img-top" alt="...">
                 <div class="card-body">
-                    <div id="a2" class="btn btn-outline-primary" >Neutral</div>
+                    <div id="a2" class="btn btn-outline-primary">Neutral</div>
                 </div>
             </div>
             <div id="card3" class="card col-6 col-md border-0" onclick="handleOnClick(3)">
                 <img src="https://i.warbycdn.com/v/c/assets/frames-quiz/image/color-black/1/1c6017ab1c.png?quality=70&width=132"
                     class="card-img-top" alt="...">
                 <div class="card-body">
-                    <div id="a3" class="btn btn-outline-primary" >Black</div>
+                    <div id="a3" class="btn btn-outline-primary">Black</div>
                 </div>
             </div>
             <div id="card4" class="card col-6 col-md border-0" onclick="handleOnClick(4)">
@@ -80,41 +82,47 @@
             </div>
         </div>
 
-            <a id="confirm" class="btn btn-outline-secondary" href="page4.html">No preference</a>
+        <button id="confirm" class="btn btn-outline-secondary" onclick="changePage()">No preference</button>
 
-        </div>
+    </div>
 
 
-        <script>
-            function handleOnClick(index) {
-                let card = "card" + index;
-                let a = "a" + index;
-                // set element is selected
-                if (document.getElementById(a).className != "btn btn-primary") {
-                    document.getElementById(card).style.cssText = "transition: all 0.2s ease-out; box-shadow: 0px 4px 8px rgba(38, 38, 38, 0.2);top: -4px;border: 1px solid #cccccc;background-color: white;"
-                    document.getElementById(a).className = "btn btn-primary"
-                } else {
-                    document.getElementById(card).style.cssText = ""
-                    document.getElementById(a).className = "btn btn-outline-primary"
-                }
-                let tabcontent = document.getElementsByClassName("card col-6 col-md border-0");
-                let isSelect = 0
-                // check if choosebu
-                for (i = 1; i < tabcontent.length + 1; i++) {
-                    a = "a" + i
-                    if (document.getElementById(a).className == "btn btn-primary") {
-                        isSelect++;
-                    }
-                }
-                if (isSelect > 0) {
-                    document.getElementById("confirm").className = "btn btn-primary"
-                    document.getElementById("confirm").innerHTML = "Continue"
-                } else {
-                    document.getElementById("confirm").className = "btn btn-outline-secondary"
-                    document.getElementById("confirm").innerHTML = "No preference"
+    <script>
+        $("#body").hide().fadeIn(1000);
+
+        function handleOnClick(index) {
+            let card = "card" + index;
+            let a = "a" + index;
+            // set element is selected
+            if (document.getElementById(a).className != "btn btn-primary") {
+                document.getElementById(card).style.cssText = "transition: all 0.2s ease-out; box-shadow: 0px 4px 8px rgba(38, 38, 38, 0.2);top: -4px;border: 1px solid #cccccc;background-color: white;"
+                document.getElementById(a).className = "btn btn-primary"
+            } else {
+                document.getElementById(card).style.cssText = ""
+                document.getElementById(a).className = "btn btn-outline-primary"
+            }
+            let tabcontent = document.getElementsByClassName("card col-6 col-md border-0");
+            let isSelect = 0
+            // check if choosebu
+            for (i = 1; i < tabcontent.length + 1; i++) {
+                a = "a" + i
+                if (document.getElementById(a).className == "btn btn-primary") {
+                    isSelect++;
                 }
             }
-        </script>
+            if (isSelect > 0) {
+                document.getElementById("confirm").className = "btn btn-primary"
+                document.getElementById("confirm").innerHTML = "Continue"
+            } else {
+                document.getElementById("confirm").className = "btn btn-outline-secondary"
+                document.getElementById("confirm").innerHTML = "No preference"
+            }
+        }
+        function changePage(){
+            $("#body").fadeOut(1000);
+            setInterval(function () { location.href = "page4.html" }, 1000)
+        }
+    </script>
 </body>
 
 </html>
