--- a/page5.html
+++ b/page5.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Page 4 </title>
+    <title>Page 5 </title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
@@ -17,6 +17,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js"
         integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj"
         crossorigin="anonymous"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
     <style>
         .card:hover {
@@ -29,7 +30,7 @@
     </style>
 </head>
 
-<body>
+<body id="body">
 
     <div class="container" style="text-align: center;">
         <h1>Range</h1>
@@ -37,24 +38,42 @@
 
         <div class="row">
             <div id="card1" class="card col-12 col-md border-0" onclick="handleOnClick(1)">
-                <img src="https://i.warbycdn.com/v/c/assets/frames-quiz/image/color-bright/0/5f898a7632.png?quality=70&width=132"
-                    class="card-img-top" alt="...">
-                <div class="card-body">
-                    <div id="a1" class="btn btn-outline-primary">+- 0.00 - 2.00</div>
+                <div class="row">
+                    <div class="col-3"></div>
+                    <div class="col-6">
+                        <img src="https://i.warbycdn.com/v/c/assets/frames-quiz/image/color-bright/0/5f898a7632.png?quality=70&width=132"
+                            class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <div id="a1" class="btn btn-outline-primary">+- 0.00 - 2.00</div>
+                        </div>
+                    </div>
+                    <div class="col-3"></div>
                 </div>
             </div>
             <div id="card2" class="card col-12 col-md border-0" onclick="handleOnClick(2)">
-                <img src="https://i.warbycdn.com/v/c/assets/frames-quiz/image/color-neutral/0/1446237873.png?quality=70&width=132"
-                    class="card-img-top" alt="...">
-                <div class="card-body">
-                    <div id="a2" class="btn btn-outline-primary">+- 2.00 - 4.00</div>
+                <div class="row">
+                    <div class="col-3"></div>
+                    <div class="col-6">
+                        <img src="https://i.warbycdn.com/v/c/assets/frames-quiz/image/color-neutral/0/1446237873.png?quality=70&width=132"
+                            class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <div id="a2" class="btn btn-outline-primary">+- 2.00 - 4.00</div>
+                        </div>
+                    </div>
+                    <div class="col-3"></div>
                 </div>
             </div>
             <div id="card3" class="card col-12 col-md border-0" onclick="handleOnClick(3)">
-                <img src="https://i.warbycdn.com/v/c/assets/frames-quiz/image/color-black/1/1c6017ab1c.png?quality=70&width=132"
-                    class="card-img-top" alt="...">
-                <div class="card-body">
-                    <div id="a3" class="btn btn-outline-primary">+- 4.00 up</div>
+                <div class="row">
+                    <div class="col-3"></div>
+                    <div class="col-6">
+                        <img src="https://i.warbycdn.com/v/c/assets/frames-quiz/image/color-black/1/1c6017ab1c.png?quality=70&width=132"
+                            class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <div id="a3" class="btn btn-outline-primary">+- 4.00 up</div>
+                        </div>
+                    </div>
+                    <div class="col-3"></div>
                 </div>
             </div>
 
@@ -64,6 +83,8 @@
 
 
     <script>
+        $("#body").hide().fadeIn(1000);
+
         function handleOnClick(index) {
             // set element is selected
             let tabcontent = document.getElementsByClassName("col-12 col-md border-0");
@@ -79,7 +100,8 @@
                     document.getElementById(a).className = "btn btn-outline-primary"
                 }
             }
-            setInterval(function(){location.href="page6.html"}, 500)
+            $("#body").fadeOut(1000);
+            setInterval(function () { location.href = "page6.html" }, 1000)
         }
     </script>
 </body>
