--- a/page2.html
+++ b/page2.html
@@ -31,81 +31,99 @@
     </style>
 </head>
 
-<body id="body">
-
-    <div class="container" style="text-align: center;">
-        <h1>Which material do you like</h1>
-        <p>Pick as many as you want</p>
+<body id="body" style="display: none"></body>
 
 
-        <div class="row">
-            <div id="card1" class="card col-12 col-sm border-0" onclick="handleOnClick(1)">
-                <img src="https://cdn.shopify.com/s/files/1/1817/8293/products/AsteriBlackFront_2000x.jpg?v=1597655858"
-                    class="card-img-top" alt="...">
-                <div class="card-body">
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                        card's content.</p>
-                    <div id="a1" class="btn btn-outline-primary">Acetate</div>
+<div class="container" style="text-align: center;">
+    <h1>Which material do you like</h1>
+    <p>Pick as many as you want</p>
+
+
+    <div class="row">
+        <div id="card1" class="card col-12 col-sm border-0" onclick="handleOnClick(1)">
+            <div class="row">
+                <div class="col-4 col-md-12 mt-4">
+                    <img src="https://cdn.shopify.com/s/files/1/1817/8293/products/AsteriBlackFront_2000x.jpg?v=1597655858"
+                        class="card-img-top" alt="...">
                 </div>
-            </div>
-            <div id="card2" class="card col-sm border-0" onclick="handleOnClick(2)">
-                <img src="https://cdn.shopify.com/s/files/1/1817/8293/products/AsteriBlackFront_2000x.jpg?v=1597655858"
-                    class="card-img-top" alt="...">
-                <div class="card-body">
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                        card's content.</p>
-                    <div id="a2" class="btn btn-outline-primary">Metal</div>
-                </div>
-            </div>
-            <div id="card3" class="card col-sm border-0" onclick="handleOnClick(3)">
-                <img src="https://cdn.shopify.com/s/files/1/1817/8293/products/AsteriBlackFront_2000x.jpg?v=1597655858"
-                    class="card-img-top" alt="...">
-                <div class="card-body">
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                        card's content.</p>
-                    <div id="a3" class="btn btn-outline-primary">Mixed material</div>
+                <div class="col-8 col-md-12">
+                    <div class="card-body" style="text-align: left;">
+                        <div id="a1" class="btn btn-outline-primary" style="border-radius: 50px;">Acetate</div>
+                        <p class="card-text">Some quick example text to build on the card.</p>
+                    </div>
                 </div>
             </div>
         </div>
-        <button id="confirm" class="btn btn-outline-secondary" onclick="changePage()">No preference</button>
-
+        <div id="card2" class="card col-12 col-sm border-0" onclick="handleOnClick(2)">
+            <div class="row">
+                <div class="col-4 col-md-12 mt-4">
+                    <img src="https://cdn.shopify.com/s/files/1/1817/8293/products/AsteriBlackFront_2000x.jpg?v=1597655858"
+                        class="card-img-top" alt="...">
+                </div>
+                <div class="col-8 col-md-12">
+                    <div class="card-body" style="text-align: left;">
+                        <div id="a2" class="btn btn-outline-primary" style="border-radius: 50px;">Metal</div>
+                        <p class="card-text">Some quick example text to build on the card.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div id="card3" class="card col-12 col-sm border-0" onclick="handleOnClick(3)">
+            <div class="row">
+                <div class="col-4 col-md-12 mt-4">
+                    <img src="https://cdn.shopify.com/s/files/1/1817/8293/products/AsteriBlackFront_2000x.jpg?v=1597655858"
+                        class="card-img-top" alt="...">
+                </div>
+                <div class="col-8 col-md-12">
+                    <div class="card-body" style="text-align: left;">
+                        <div id="a3" class="btn btn-outline-primary" style="border-radius: 50px;">Mixed material</div>
+                        <p class="card-text">Some quick example text to build on the card.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
-    <script>
-        $("#body").hide().fadeIn(1000);
+    <button id="confirm" class="btn btn-outline-secondary" onclick="changePage()">No preference</button>
 
-        function handleOnClick(index) {
-            let card = "card" + index;
-            let a = "a" + index;
-            // set element is selected
-            if (document.getElementById(a).className != "btn btn-primary") {
-                document.getElementById(card).style.cssText = "transition: all 0.2s ease-out; box-shadow: 0px 4px 8px rgba(38, 38, 38, 0.2);top: -4px;border: 1px solid #cccccc;background-color: white;"
-                document.getElementById(a).className = "btn btn-primary"
-            } else {
-                document.getElementById(card).style.cssText = ""
-                document.getElementById(a).className = "btn btn-outline-primary"
-            }
-            let tabcontent = document.getElementsByClassName("card col-sm border-0");
-            let isSelect = 0
-            // check if choosebu
-            for (i = 1; i < tabcontent.length + 1; i++) {
-                a = "a" + i
-                if (document.getElementById(a).className == "btn btn-primary") {
-                    isSelect++;
-                }
-            }
-            if (isSelect > 0) {
-                document.getElementById("confirm").className = "btn btn-primary"
-                document.getElementById("confirm").innerHTML = "Continue"
-            } else {
-                document.getElementById("confirm").className = "btn btn-outline-secondary"
-                document.getElementById("confirm").innerHTML = "No preference"
+</div>
+<script>
+    document.getElementById("body").style.display = "block";
+
+    $("#body").hide().fadeIn(1000);
+
+    function handleOnClick(index) {
+        let card = "card" + index;
+        let a = "a" + index;
+        // set element is selected
+        if (document.getElementById(a).className != "btn btn-primary") {
+            document.getElementById(card).style.cssText = "transition: all 0.2s ease-out; box-shadow: 0px 4px 8px rgba(38, 38, 38, 0.2);top: -4px;border: 1px solid #cccccc;background-color: white;"
+            document.getElementById(a).className = "btn btn-primary"
+        } else {
+            document.getElementById(card).style.cssText = ""
+            document.getElementById(a).className = "btn btn-outline-primary"
+        }
+        let tabcontent = document.getElementsByClassName("card");
+        let isSelect = 0
+        // check if choosebu
+        for (i = 1; i < tabcontent.length + 1; i++) {
+            a = "a" + i
+            if (document.getElementById(a).className == "btn btn-primary") {
+                isSelect++;
             }
         }
-        function changePage(){
-            $("#body").fadeOut(1000);
-            setInterval(function () { location.href = "page3.html" }, 1000)
+        if (isSelect > 0) {
+            document.getElementById("confirm").className = "btn btn-primary"
+            document.getElementById("confirm").innerHTML = "Continue"
+        } else {
+            document.getElementById("confirm").className = "btn btn-outline-secondary"
+            document.getElementById("confirm").innerHTML = "No preference"
         }
-    </script>
+    }
+    function changePage() {
+        $("#body").fadeOut(1000);
+        setInterval(function () { location.href = "page3.html" }, 1000)
+    }
+</script>
 </body>
 
 </html>
